cmake_minimum_required(VERSION 3.9)
project(acm)
set(CMAKE_CXX_STANDARD 11)


include_directories(src)


add_executable(template template.cpp)
add_executable(P10480 oj/uva/104/10480.cpp)
add_executable(P1658 oj/uva/16/1658.cpp)
add_executable(P11987 oj/uva/119/11987.cpp)
add_executable(POH11166 oj/hdu/11/1166.cpp)
